--- a/adviser/templates/adviser/index.html
+++ b/adviser/templates/adviser/index.html
@@ -4,12 +4,12 @@
   <h2>Upload a Document</h2>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <div>
+    <div class="form-field-container">
         <label for="{{ form.title.id_for_label }}">Title:</label>
         {{ form.title }} <!-- Renders the title field -->
         {{ form.title.errors }} <!-- Displays errors for the title field -->
       </div>
-      <div>
+      <div class="form-field-container">
         {{ form.uploaded_file }} <!-- Renders the file input field -->
         {{ form.uploaded_file.errors }} <!-- Displays errors for the file field -->
       </div><br>
@@ -19,7 +19,7 @@
   <h2>Uploaded Documents</h2>
   <u1>
     {% for document in documents %}
-    <li>{{ document.title }}: {{document.uploaded_file.url }}</li>
+    <li><b>{{ document.title }}</b>: {{document.uploaded_file.url }}</li>
     {% endfor %}
   </u1>
   {% endblock %}
