--- a/adviser/templates/layout.html
+++ b/adviser/templates/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -9,12 +10,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-        <!-- <link href="/static/styles.css" rel="stylesheet"> -->
+        <link href="{% static 'style.css' %}" rel="stylesheet">
         <title>GPT Advice</title>
     </head>
 
     <body>
         <main class="container py-5 text-center">
+            <h1>GPT Advice</h1>
             {% block main %}{% endblock %}
         </main>
 
@@ -27,7 +29,7 @@
             <form action="https://validator.w3.org/check" class="text-center" enctype="multipart/form-data" method="post" target="_blank">
                 <input name="doctype" type="hidden" value="HTML5">
                 <input name="fragment" type="hidden">
-                <input alt="Validate" src="/static/I_heart_validator.png" type="image"> <!-- https://validator.w3.org/ -->
+                <input alt="Validate" src="{% static 'images/I_heart_validator.png' %}" type="image"> <!-- https://validator.w3.org/ -->
             </form>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
