--- a/adviser/templates/layout.html
+++ b/adviser/templates/layout.html
@@ -13,10 +13,9 @@
         <link href="{% static 'style.css' %}" rel="stylesheet">
         <title>GPT Advice</title>
     </head>
-
     <body>
         <main class="container py-5 text-center">
-            <h1>GPT Advice</h1>
+            <h1 class="text-center mb-4">GPT Advice</h1>
             {% block main %}{% endblock %}
         </main>
 
@@ -44,6 +43,5 @@
                 });
             </script>
         </footer>
-
     </body>
 </html>
