--- a/adviser/static/style.css
+++ b/adviser/static/style.css
@@ -1,57 +1,62 @@
-body {
-    background-color: #f0f0f0; /* Light gray background */
-    font-family: Arial, sans-serif; /* Optional: Sets a clean, readable font */
+:root {
+    --bs-primary: #30E3CA;
+    --bs-secondary: #E4F9F5;
+    --bs-info: #11999E;
+    --bs-danger: #40514E;
 }
 
-/* Ensure form itself is centered on the page */
-form {
+html {
+    height: 100%;
+}
+
+body {
+    background-color: var(--bs-secondary);
+    color: #333;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color: #fff9e6;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    width: auto;
-    margin: auto;
+    min-height: 100vh;
+    margin: 0;
 }
 
-form input, form button {
-    margin: 10px 0; /* Adds space between form elements */
-    display: inline-block; /* Aligns elements to center */
+main {
+    flex: 1;
 }
 
-h2 {
-    color: #333;
-    font-size: 18px; /* Adjust font size to make headers smaller */
-    text-align: center; /* Center-align the text */
-}
-ul {
-    list-style-type: none; /* Removes bullet points from list */
-    padding: 0;
+h1, h2 {
+    color: var(--bs-danger);
 }
 
-li {
-    margin-bottom: 10px; /* Adds space between list items */
-    color: #555; /* Lighter text color for list items */
+.btn-primary {
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
-/* Adjustments for better form input and button appearance */
-input[type="file"] {
-    border: 1px solid #ccc;
-    display: block;
-    padding: 6px 12px;
+.btn-primary:hover {
+    background-color: var(--bs-info);
+    border-color: var(--bs-info);
 }
 
-button {
-    background-color: #4CAF50; /* A pleasant green */
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.form-control {
+    background-color: #fff;
+    border: 1px solid var(--bs-info);
+    margin: 10px 0;
+    width: 40%;
+    display: inline-block;
 }
 
-button:hover {
-    background-color: #45a049; /* Darker green on hover */
+.form-select {
+    background-color: #fff;
+    border: 1px solid var(--bs-info);
+    margin: 10px 0;
+    width: 60%;
+    display: inline-block;
+}
+
+a, a:hover {
+    color: var(--bs-danger);
+}
+
+footer {
+    background-color: var(--bs-primary);
+    color: var(--bs-danger);
 }
