--- a/adviser/static/style.css
+++ b/adviser/static/style.css
@@ -1,4 +1,5 @@
 :root {
+    --bs-main: #333;
     --bs-primary: #30E3CA;
     --bs-secondary: #E4F9F5;
     --bs-info: #11999E;
@@ -11,7 +12,7 @@ html {
 
 body {
     background-color: var(--bs-secondary);
-    color: #333;
+    color: var(--bs-main);
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -24,6 +25,17 @@ main {
 
 h1, h2 {
     color: var(--bs-danger);
+    margin-bottom: 1rem;
+    
+}
+h4 {
+    color: var(--bs-main);
+    margin-bottom: 0.5rem;
+    font-size: 0.8rem;
+}
+
+img {
+    margin-bottom: 1rem;
 }
 
 .btn-primary {
