--- a/adviser/templates/layout.html
+++ b/adviser/templates/layout.html
@@ -15,7 +15,8 @@
     </head>
     <body>
         <main class="container py-5 text-center">
-            <h1 class="text-center mb-4">GPT Advice</h1>
+            <h1>GPT Advice</h1>
+            <img src="{% static 'images/chatgpt_logo.png' %}" alt="ChatGPT logo">
             {% block main %}{% endblock %}
         </main>
 
