--- a/adviser/templates/adviser/gpt.html
+++ b/adviser/templates/adviser/gpt.html
@@ -1,24 +1,19 @@
 {% extends "layout.html" %}
 
 {% block main %}
-    <h4>{{ data_file.title }} ({{ data_file.uploaded_file }})</h4>
+    {% if data_file %}
+        <h4>{{ data_file.title }} ({{ data_file.uploaded_file }})</h4>
+    {% endif %}    
     <form id="questionForm" data-base-action="{% url 'adviser:gpt_base' %}" method="post">
         {% csrf_token %}
             <input type="hidden" id="firstQuestion" name="firstQuestion" value="{{ firstQuestion }}">
-            <input type="hidden" id="documentId" name="documentId" value="{{ data_file.id }}">
+            <input type="hidden" id="loadAll" name="loadAll" value="{% if data_file %}false{% else %}{{ loadAll }}{% endif %}">
+            {% if data_file %}    
+                <input type="hidden" id="documentId" name="documentId" value="{{ data_file.id }}">
+            {% endif %}
             <input type="text" class="form-control" id="question" name="question" placeholder="Enter your question">
             <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            var selectedDocumentId = "{{ data_file.id }}";
-            document.getElementById('documentId').value = selectedDocumentId;
-
-            var form = document.getElementById('questionForm');
-            var baseAction = form.getAttribute('data-base-action');
-            form.action = baseAction + selectedDocumentId + '/';
-        });
-    </script>
 
     {% if messages %}
         {% for message in messages %}
