--- a/adviser/templates/adviser/index.html
+++ b/adviser/templates/adviser/index.html
@@ -40,15 +40,65 @@
                 <option value="{{ document.id }}">{{ document.title }}: {{ document.uploaded_file.url }}</option>
             {% endfor %}
         </select>
+        <button type="button" class="btn btn-danger" id="deleteButton">Delete</button>
+        <br>
+        <div class="form-check form-switch">
+            <label class="form-check-label" for="checkboxLoadAll">Load all</label>
+            <input class="form-check-input" type="checkbox" id="checkboxLoadAll" name="loadAll" value="false">
+        </div>
         <br>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <p id="deleteResponseMessage"> </p>
     <script>
-        document.getElementById('documentSelect').addEventListener('change', function() {
-            var selectedDocumentId = this.value;
-            var form = document.getElementById('documentForm');
-            var baseAction = form.getAttribute('data-base-action');
-            form.action = baseAction + selectedDocumentId + '/';
+        document.addEventListener('DOMContentLoaded', function() {
+        // Script for delete button
+            document.getElementById('deleteButton').addEventListener('click', function() {
+                var selectedDocumentId = document.getElementById('documentSelect').value;
+                if (selectedDocumentId === 'Select a file') {
+                    alert('Please select a document to delete.');
+                } else {
+                    if (confirm('Are you sure you want to delete this document?')) {
+                        fetch(`delete_document/${selectedDocumentId}/`, {
+                            method: 'DELETE',
+                            headers: {
+                                'X-CSRFToken': document.querySelector('input[name="csrfmiddlewaretoken"]').value
+                            }
+                        })
+                        .then(response => {
+                            if (response.ok) {
+                                // Reload the page to reflect changes
+                                window.location.reload();
+                            } else {
+                                console.error('Failed to delete document');
+                            }
+                            return response.json(); // Parse response body as JSON
+                        })
+                        .then(data => {
+                            // Display response message
+                            var responseMessageElement = document.getElementById('deleteResponseMessage');
+                            responseMessageElement.textContent = data.message;
+                        })
+                        .catch(error => console.error('Error:', error));
+                    }
+                }                
+            });
+            // Script for document select
+            document.getElementById('documentSelect').addEventListener('change', function() {
+                var selectedDocumentId = this.value;
+                var form = document.getElementById('documentForm');
+                var baseAction = form.getAttribute('data-base-action');
+                form.action = baseAction + selectedDocumentId + '/';
+            });
+
+            // Script for load all checkbox
+            document.getElementById('checkboxLoadAll').addEventListener('change', function(event) {
+                if (this.checked) {
+                    this.setAttribute('value', 'true');
+                } else {
+                    this.setAttribute('value', 'false');
+                }
+            });
         });
     </script>
 {% endblock %}
