--- a/adviser/templates/adviser/index.html
+++ b/adviser/templates/adviser/index.html
@@ -44,7 +44,7 @@
         <br>
         <div class="form-check form-switch">
             <label class="form-check-label" for="checkboxLoadAll">Load all</label>
-            <input class="form-check-input" type="checkbox" id="checkboxLoadAll" name="loadAll" value="false">
+            <input class="form-check-input" type="checkbox" id="checkboxLoadAll" name="loadAll" value="">
         </div>
         <br>
         <button type="submit" class="btn btn-primary">Submit</button>
